# petsc_cuda

./: CMakeLists.txt  README.md  benchmark_cpuseq.cpp  benchmark_mdot.cpp  benchmark_mdot.cu  benchmark_seq.cu  test1_sum.cpp  test1_sum.cu  test2_mdot.cpp  test2_mdot.cu  test3_load.cpp  test3_load.cu  test4_is.cpp  test4_is.cu  test5_pointer.cpp  test5_pointer.cu
batch/: mdot_cpu2.batch  mdot_gpu2.batch  test1_cpu2.batch  test1_gpu1_does_not_work.batch  test1_gpu2.batch  test2_cpu2.batch  test2_gpu2.batch  test3_cpu2.batch  test3_gpu2.batch  test4_cpu2.batch  test4_gpu2.batch  test5_cpu2.batch  test5_gpu2.batch
include/: cuda_stuff.h  this_is_kernel.h  timer.h
util/: module_load_daint  module_load_daint_mc  module_load_daint_sandbox  set_petsc_dir_arch
